# calc_pi

./: .gitignore  CMakeLists.txt  montecarlo  montecarlo.cpp
